--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -660,7 +660,7 @@ main {
   text-align: center;
 }
 
-.item-icon {
+.mobile-nav .item-icon {
   width: 64px;
   height: 32px;
   display: grid;
@@ -842,6 +842,27 @@ main {
 /*-----------------------------------*\
   #FOOTER
 \*-----------------------------------*/
+
+.footer .logo{
+  display: none;
+}
+
+.footer {
+  padding: 16px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  column-gap: 12px;
+  border-block-start: 1px solid var(--outline);
+}
+
+.copyright {opacity: 0.8;}
+
+.footer .edamam img{
+  width: 180px;
+}
+
 
 /*-----------------------------------*\
   #FILTER BAR
